# deep

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/material/: force_field.wgsl
assets/shader/: fresnel.wgsl  simplex_noise_3d.wgsl  worley_noise_3d.wgsl
deep-rtin/: Cargo.toml
deep-rtin/src/: error.rs  heightmap.rs  lib.rs  rtin.rs
deep-voronoi/: Cargo.toml
src/: color.rs  main.rs  tmp.rs
src/render/: force_field.rs  line.rs  mod.rs
src/submarine/: controller.rs  height.rs  hud.rs  mod.rs  module.rs  motion.rs  power.rs  settings.rs
src/submarine/hud/: condition.rs  crosshair.rs  information.rs  mod.rs  module.rs
src/submarine/module/: action.rs  aftercast.rs  engine.rs  mod.rs  shutdown.rs  startup.rs
src/submarine/module/action/: mod.rs  resource_scanner.rs  ressource_scanner.rs
src/submarine/module/condition/: engine_stop.rs  mod.rs
src/submarine/module/requirement/: mod.rs
src/terrain/: mod.rs  sky.rs
src/terrain/generator/: colors.md  mod.rs  rtin.rs  u32.rs
