[package]
name = "deep"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "*", features = ["wayland"] }
bevy_atmosphere = "*"
bevy_editor_pls = "*"
bevy_iced = "0.3.0"
bevy_rapier3d = "*"
colorgrad = "*"
image = "*"
nalgebra = "*"
rand = "*"
uuid = "*"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
