[package]
name = "deep"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
deep-voronoi = { path = "deep-voronoi" }
deep-rtin = { path = "deep-rtin" }

bevy = { version = "*", features = ["wayland"] }
bevy_atmosphere = "*"
bevy_editor_pls = "*"
bevy_rapier3d = "*"
colorgrad = "*"
rand = "*"
uuid = "*"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
